--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.5",
     "@hapi/jwt": "^2.1.1",
     "amqplib": "^0.8.0",
     "bcrypt": "^5.0.1",
@@ -10,6 +11,7 @@
     "joi": "^17.6.0",
     "nanoid": "^3.3.1",
     "node-pg-migrate": "^6.2.1",
+    "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
     "pg": "^8.7.3"
   },
