--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "node-pg-migrate": "^6.2.1",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "redis": "^4.0.6"
   },
   "name": "openmusic",
   "version": "1.0.0",
